# clipex

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
clipet/ui/cli/: cli.py
clipet/ui/gui/: gui.py
clipex/core/command_runner/: command_runner.py  simple_runner.py
clipex/core/search_method/: exhaustive.py  search_method.py
clipex/experiment/: experiment.py  line_definition.py  variable.py
clipex/experiment/variable/: float_var.py  int_var.py  string_list_var.py  toggleable_string.py  variable.py
clipex/ui/cli/: cli.py
clipex/ui/gui/: gui.py
devTools/: build_install_wheel.py
dev_tools/: build_install_wheel.py
src/clipbench/configuration/: configuration.py
src/clipbench/core/: evaluator.py  executor.py  registry.py
src/clipbench/experiment/: command_builder.py  experiment.py  variable_handler.py
src/clipbench/experiment_converter/: experiment_provider.py  parser.py
src/clipbench/result_converter/: result_provider.py
src/clipbench/result_viewer/: result_viewer.py
src/clipex/core/: evaluator.py  executor.py  search_space.py
src/clipex/experiment/: command_builder.py  experiment.py  variable_handler.py
src/clipex/experiment_converter/: experiment_provider.py  parser.py
src/clipex/result_converter/: result_saver.py
tests/dummy_scripts/: sleep.py
tests/interesting_functions/: interesting_functions.py  plotter.py  test_sleep_linear.py
tests/tests_command_runner/: test_simple_command_runner.py
tests/tests_search_method/: test_exhaustive.py
tests/tests_variable/: test_variable_types.py
tests/unit/experiment_converter/: input.xml  test_xml_parser.py
(+30 files in other folders)
