[metadata]
name = clipex
version = 0.0.0
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
author = StefanVasak

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = clipex*
exclude = dev_tools*

[options.entry_points]
console_scripts =
    clipex = clipex.ui.cli.cli:main
gui_scripts =
    clipex-gui = clipex.ui.gui.gui:main
