[metadata]
name = clipbench
version = 0.0.0
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
author = StefanVasak

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = clipbench*
exclude = dev_tools*

[options.entry_points]
console_scripts =
    clipbench = clipbench.ui.cli.cli:main
gui_scripts =
    clipbench-gui = clipbench.ui.gui.gui:main
