[metadata]
name = clipbench
version = 0.0.0
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
author = StefanVasak

[options]
packages = find:
package_dir =
    = src
install_requires =
    kivy>=2.0.0
    matplotlib>=3.5.0
    numpy>=1.20.0

[options.packages.find]
where = src
include = clipbench*
exclude = dev_tools*

[options.entry_points]
console_scripts =
    clipbench = clipbench.ui.cli.cli:main
gui_scripts =
    clipbench-gui = clipbench.ui.gui.gui:main

[options.extras_require]
dev =
    black>=22.0.0
    pytest>=7.0.0
packaging =
    build>=0.7.0
    packaging>=21.0
